--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ author:
 baseurl: '/' # Change this to your relative path (ex: /blog/), or leave just a /
 highlighter: rouge
 markdown: kramdown
+theme: jekyll-theme-minimal
 kramdown:
   input: GFM
 
