--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://hewei.site"
 author:
   name: "Harvey"
   email: "heweimr@gmail.com"
-  url: "http://www.hewei.site"
+  url: "https://magefesa.github.io"
 
 # Build settings
 baseurl: '/' # Change this to your relative path (ex: /blog/), or leave just a /
